# chronos-timeledger

./: .gitignore  Cargo.toml  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: contracts.yml
apps/mobile/: App.tsx  app.json  package.json
apps/mobile/src/: ledgerContract.mjs
apps/mobile/test/: ledger-contract.test.mjs
apps/tui/: Cargo.toml  SPEC.md
apps/tui/src/: ledgers.rs  storage.rs  ui.rs
contracts/fixtures/invalid/: event-missing-type.json  header-missing-schema-version.json
contracts/fixtures/roundtrip/: example.ledger
contracts/fixtures/valid/: example-events.jsonl  example-header.json
contracts/schemas/: ledger-header.schema.json  time-event.schema.json
contracts/spec/: format-v1.md
src/: domain.rs  ledgers.rs  main.rs  storage.rs  ui.rs
tools/contract-tests/: README.md  package.json
tools/contract-tests/src/: validate-fixtures.mjs  validators.mjs
