[package]
name = "chronos_timeledger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.8.5"
ratatui = "0.30.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.20"
